--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
 
+  <link rel="stylesheet" src="/style.css">
 
-
-  <title>Simple HTML Template</title>
+  <title>IshraqNotFound</title>
 </head>
 <body>
 
