--- a/index.html
+++ b/index.html
@@ -2,17 +2,86 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" src="/style.css">
-
-  <title>IshraqNotFound</title>
+  <title>it's Ishraq here!</title>
+  
+  <!-- HTML -->
+  <script src="main.js"></script>
+  <script src="lightMode.js"></script>
+  
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="toggleButton.css" title="" type="" />
+  <link rel="stylesheet" href="lightMode.css">
 </head>
+
 <body>
-
-
-  <h1>Hello, World!</h1>
-  <p>This is a simple HTML template.</p>
-
-
+  <nav class="nav-bar">
+    <ul class="nav-ul">
+      <li class="Brand"><a href="home">IIT CLUB</a></li>
+      <li><a href="home">home</a></li>
+      <li><a href="home">Projects</a></li>
+      <li><a href="home">Gallery</a></li>
+      <li><a href="home">About us</a></li>
+      <li><label class="emoji-toggle">
+  <input type="checkbox" id="theme-toggle">
+  <span class="emoji-slider"> dark/light mode</span>
+</label></li>
+    </ul>
+  </nav>
+  <section class="intro">
+    <div class="nav-list">
+      <ul>
+        <li class="Brand"><a href="home">IIT CLUB</a></li>
+        <li><a href="home">home</a></li>
+        <li><a href="home">Projects</a></li>
+        <li><a href="home">Gallery</a></li>
+        <li><a href="home">About us</a></li>
+      </ul>
+      <label class="emoji-toggle">
+        <input type="checkbox" id="theme-toggle-mobile">
+        <span class="emoji-slider">  dark/light mode</span>
+      </label>
+    </div>
+    <div class="IITCLUB">
+      <h1>Hey, I'm Ishraq Hasin – Glad You're Here!</h1>
+      <p>Welcome to my little corner of the internet. I'm excited to have you here, companion. Let's explore and connect!</p>
+    </div>
+  </section>
+  <section class="sectionOne">
+    <h2>About me</h2>
+    <p>I am Muhammad Ishraq Hasin, born on July 24, 2009, and currently studying in Class 10 at Bangladesh Air Force Shaheen College Kurmitola, Dhaka Cantonment, Bangladesh. I have a strong passion for subjects such as Mathematics, Higher Mathematics, Physics, Chemistry, and Information & Communication Technology (ICT), as I enjoy the critical thinking and conceptual understanding they require, especially in areas like programming and digital technologies. I excel in Mathematics and am confident in solving complex problems. I have participated in extracurricular activities, such as the ICONIC IT Club’s quiz competition, where I proudly secured 3rd place. My future goal is to pursue a career in aviation, aiming to become a pilot, with a particular interest in technology-based fields like aviation, engineering, and ICT. I am continuously working on developing my programming skills and improving my presentation abilities. My approach to academics involves consistent study, including extra classes at coaching centers, and effective time management by studying during late hours when necessary.</p>
+  </section>
+  <section class="sectionTwo">
+    <div class="aboutUs">
+      <h1>About Us</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet tincidunt ipsum. Phasellus dapibus auctor metus, et viverra justo bibendum eget. Morbi convallis, nisi eu aliquam vulputate, nulla lectus dapibus eros, sit amet dignissim nunc dui sed felis. Nulla facilisi. Fusce a viverra magna. Aliquam erat volutpat. Integer ut augue quis lectus viverra lobortis. Vestibulum laoreet, libero in volutpat pellentesque, nunc ipsum feugiat elit, ac ultricies turpis nulla at dui. Morbi fermentum lobortis ante, id volutpat nunc accumsan sed. Nam pellentesque purus urna, eu maximus nisi interdum et. Mauris vulputate felis nec nunc malesuada, a laoreet lorem condimentum. Curabitur lobortis erat vel ante mollis, id maximus lacus posuere. Ut volutpat viverra lectus, nec varius dui iaculis vel. Nunc et nisi justo. Vestibulum interdum metus ut tempus dapibus. Sed id sollicitudin metus. Integer aliquam sed nunc sed lacinia. Duis feugiat, nulla id aliquam sodales, tortor libero cursus urna, et convallis sem leo ac elit.</p>
+      <button type="button">Learn more</button>
+    </div>
+    <div class="members">
+      <h1>Our Projects</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet tincidunt ipsum. Phasellus dapibus auctor metus, et viverra justo bibendum eget. Morbi convallis, nisi eu aliquam vulputate, nulla lectus dapibus eros, sit amet dignissim nunc dui sed felis. Nulla facilisi. Fusce a viverra magna. Aliquam erat volutpat. Integer ut augue quis lectus viverra lobortis. Vestibulum laoreet, libero in volutpat pellentesque, nunc ipsum feugiat elit, ac ultricies turpis nulla at dui. Morbi fermentum lobortis ante, id volutpat nunc accumsan sed. Nam pellentesque purus urna, eu maximus nisi interdum et. Mauris vulputate felis nec nunc malesuada, a laoreet lorem condimentum. Curabitur lobortis erat vel ante mollis, id maximus lacus posuere. Ut volutpat viverra lectus, nec varius dui iaculis vel. Nunc et nisi justo. Vestibulum interdum metus ut tempus dapibus. Sed id sollicitudin metus. Integer aliquam sed nunc sed lacinia. Duis feugiat, nulla id aliquam sodales, tortor libero cursus urna, et convallis sem leo ac elit.</p>
+    </div>
+    <div class="members">
+      <h1>Our Members</h1>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed sit amet tincidunt ipsum. Phasellus dapibus auctor metus, et viverra justo bibendum eget. Morbi convallis, nisi eu aliquam vulputate, nulla lectus dapibus eros, sit amet dignissim nunc dui sed felis. Nulla facilisi. Fusce a viverra magna. Aliquam erat volutpat. Integer ut augue quis lectus viverra lobortis. Vestibulum laoreet, libero in volutpat pellentesque, nunc ipsum feugiat elit, ac ultricies turpis nulla at dui. Morbi fermentum lobortis ante, id volutpat nunc accumsan sed. Nam pellentesque purus urna, eu maximus nisi interdum et. Mauris vulputate felis nec nunc malesuada, a laoreet lorem condimentum. Curabitur lobortis erat vel ante mollis, id maximus lacus posuere. Ut volutpat viverra lectus, nec varius dui iaculis vel. Nunc et nisi justo. Vestibulum interdum metus ut tempus dapibus. Sed id sollicitudin metus. Integer aliquam sed nunc sed lacinia. Duis feugiat, nulla id aliquam sodales, tortor libero cursus urna, et convallis sem leo ac elit.</p>
+    </div>
+  </section>
+  <div class="spacer">
+    
+  </div>
+  <section class="footer">
+    <div class="copy">
+      <p>Copyright &copy; Ishraq Hasin all rights reserved.</p>
+    </div>
+    <div class="address">
+      <div>
+        <p>Contact: +880 1710-59995</p>
+        <p>Email: <a href="mailto:ishraqhasinbd@gmail.com">ishraqhasinbd@gmail.com</a></p>
+      </div>
+    </div>
+  </section>
 </body>
 </html>
